[Harshdeep Singh]Add. dev updated